# fastapi_blog

./: .gitignore  aerich.ini  main.py  pyproject.toml  routes.py
auth/: jwt.py  schemas.py  services.py  views.py
core/: auth.py  db.py  settings.py
post/: models.py  schemas.py  services.py  views.py
user/: auth.py  models.py  permissions.py  schemas.py  services.py  views.py
