[tool.poetry]
name = "fastapi_blog"
version = "0.1.0"
description = ""
authors = ["bohda <bohdangavryschuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
databases = "^0.5.3"
alembic = "^1.7.4"
psycopg2 = "^2.9.1"
asyncpg = "^0.24.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^8.1.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
